@@ -1,0 +1,6 @@
+<html>
+<body>
+SVG to the max!<br>
+<img src="green_rectangle.svg"/>
+</body>
+</html>
